--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientAdapter.cs" />
     <Compile Include="EmployeeAdapter.cs" />
     <Compile Include="GeneralAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
